--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "homepage": "https://github.com/jthomps838/node_api_template#readme",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "connect-redis": "^7.1.1",
         "cors": "^2.8.5",
         "eslint": "^8.57.0",
         "express": "^4.19.2",
@@ -33,11 +34,13 @@
         "mongodb": "^6.8.0",
         "mongoose": "^8.5.1",
         "morgan": "^1.10.0",
+        "node-color-log": "^12.0.1",
         "nodemon": "^3.1.4",
         "passport": "^0.7.0",
         "passport-local": "^1.0.0",
         "password-validator": "^5.3.0",
         "prettier": "^3.3.3",
+        "redis": "^4.6.15",
         "supertest": "^7.0.0"
     },
     "devDependencies": {
